--- a/admin/index.html
+++ b/admin/index.html
@@ -1,192 +1,77 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Admin - DesiStory</title>
-    <meta name="description" content="Admin panel for DesiStory">
-    <link rel="stylesheet" href="https://unpkg.com/netlify-cms@^2.0.0/dist/cms.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Merriweather:wght@300;400;700&display=swap" rel="stylesheet">
-    <style>
-        :root {
-            --primary-beige: #f5f2ed;
-            --deep-brown: #3e2723;
-            --soft-saffron: #ff8c42;
-            --off-white: #fafafa;
-            --warm-gray: #6d4c41;
-            --light-gray: #e8e6e1;
-            --text-primary: #2c1810;
-            --text-secondary: #5d4037;
-            --text-muted: #8d6e63;
-            --border-light: #e0e0e0;
-            --shadow-light: rgba(0, 0, 0, 0.08);
-            --shadow-medium: rgba(0, 0, 0, 0.12);
-            --gradient-primary: linear-gradient(135deg, #ff8c42 0%, #ff6b35 100%);
-            --gradient-subtle: linear-gradient(135deg, #f5f2ed 0%, #fff 100%);
-        }
-
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-
-        body {
-            font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', sans-serif;
-            background: var(--off-white);
-            color: var(--text-primary);
-            -webkit-font-smoothing: antialiased;
-            -moz-osx-font-smoothing: grayscale;
-        }
-
-        .admin-header {
-            background: var(--gradient-subtle);
-            border-bottom: 1px solid var(--border-light);
-            padding: 2rem 0;
-            text-align: center;
-            position: relative;
-            overflow: hidden;
-        }
-
-        .admin-header::before {
-            content: '';
-            position: absolute;
-            top: 0;
-            left: 0;
-            right: 0;
-            bottom: 0;
-            background: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100"><defs><pattern id="grain" width="100" height="100" patternUnits="userSpaceOnUse"><circle cx="25" cy="25" r="1" fill="%23ff8c42" opacity="0.05"/><circle cx="75" cy="75" r="1" fill="%23ff8c42" opacity="0.05"/></pattern></defs><rect width="100" height="100" fill="url(%23grain)"/></svg>');
-            pointer-events: none;
-        }
-
-        .admin-header-content {
-            position: relative;
-            z-index: 1;
-            max-width: 1200px;
-            margin: 0 auto;
-            padding: 0 2rem;
-        }
-
-        .admin-header h1 {
-            font-family: 'Merriweather', serif;
-            font-size: 2.5rem;
-            font-weight: 700;
-            color: var(--deep-brown);
-            margin-bottom: 0.5rem;
-        }
-
-        .admin-header p {
-            font-size: 1.1rem;
-            color: var(--text-secondary);
-            margin: 0;
-        }
-
-        .admin-header .badge {
-            display: inline-flex;
-            align-items: center;
-            gap: 0.5rem;
-            margin-top: 1rem;
-            padding: 0.5rem 1rem;
-            background: var(--gradient-primary);
-            color: white;
-            border-radius: 2rem;
-            font-size: 0.875rem;
-            font-weight: 600;
-        }
-
-        .admin-note {
-            margin-top: 1.5rem;
-            padding: 1rem;
-            background: rgba(255, 140, 66, 0.1);
-            border-left: 4px solid var(--soft-saffron);
-            border-radius: var(--radius-md);
-        }
-
-        .admin-note p {
-            margin: 0;
-            color: var(--text-secondary);
-            font-size: var(--font-sm);
-        }
-
-        .cms-container {
-            min-height: calc(100vh - 140px);
-            background: white;
-        }
-
-        /* Override Netlify CMS styles */
-        .cms-editor-control {
-            border-color: var(--border-light) !important;
-            border-radius: 0.5rem !important;
-        }
-
-        .cms-editor-control:focus {
-            border-color: var(--soft-saffron) !important;
-            box-shadow: 0 0 0 3px rgba(255, 140, 66, 0.1) !important;
-        }
-
-        .cms-button-primary {
-            background: var(--gradient-primary) !important;
-            border: none !important;
-            border-radius: 0.5rem !important;
-            font-weight: 600 !important;
-        }
-
-        .cms-button-primary:hover {
-            transform: translateY(-1px) !important;
-            box-shadow: 0 4px 12px rgba(255, 140, 66, 0.3) !important;
-        }
-
-        .cms-sidebar {
-            background: var(--gradient-subtle) !important;
-            border-right: 1px solid var(--border-light) !important;
-        }
-
-        .cms-sidebar-link {
-            color: var(--text-secondary) !important;
-            font-weight: 500 !important;
-            transition: all 0.2s ease !important;
-        }
-
-        .cms-sidebar-link:hover,
-        .cms-sidebar-link-active {
-            color: var(--soft-saffron) !important;
-            background: rgba(255, 140, 66, 0.1) !important;
-        }
-
-        @media (max-width: 768px) {
-            .admin-header h1 {
-                font-size: 2rem;
-            }
-            
-            .admin-header p {
-                font-size: 1rem;
-            }
-        }
-    </style>
+  <meta charset="UTF-8">
+  <title>DesiStory Admin Panel</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <style>
+    body { font-family: Arial, sans-serif; background:#f5f5f5; margin:0; }
+    .login-box, .admin-box { max-width:900px; margin:40px auto; background:#fff; padding:20px; border-radius:8px; box-shadow:0 4px 10px rgba(0,0,0,0.1); }
+    h2 { margin-top:0; }
+    input, textarea, select, button { width:100%; padding:10px; margin:6px 0; }
+    button { background:#ff6b35; color:#fff; border:none; border-radius:4px; cursor:pointer; }
+    button:hover { opacity:0.9; }
+    .row { display:grid; grid-template-columns:1fr 1fr; gap:10px; }
+    .hidden { display:none; }
+    .card { border:1px solid #ddd; padding:10px; margin:10px 0; border-radius:6px; }
+  </style>
 </head>
 <body>
-    <div class="admin-header">
-        <div class="admin-header-content">
-            <h1>DesiStory Admin</h1>
-            <p>Manage your stories and content with ease</p>
-            <div class="badge">
-                <span>✨</span>
-                <span>Premium Content Management</span>
-            </div>
-            <div class="admin-note">
-                <p><strong>🔒 Secure Admin Access</strong> - This panel is only accessible to authorized users</p>
-            </div>
-        </div>
-    </div>
-    
-    <div class="cms-container">
-        <script src="https://unpkg.com/netlify-cms@^2.0.0/dist/cms.js"></script>
-        <script type="module" src="https://unpkg.com/netlify-cms@^2.0.0/dist/cms.js"></script>
-        <script>
-            CMS.init();
-        </script>
-    </div>
+
+<!-- LOGIN -->
+<div class="login-box" id="loginBox">
+  <h2>Admin Login</h2>
+  <input type="email" id="email" placeholder="Email">
+  <input type="password" id="password" placeholder="Password">
+  <button id="loginBtn">Login</button>
+  <p id="loginError" style="color:red;"></p>
+</div>
+
+<!-- ADMIN DASHBOARD -->
+<div class="admin-box hidden" id="adminBox">
+  <h2>DesiStory Admin Dashboard</h2>
+  <button id="logoutBtn">Logout</button>
+
+  <hr>
+
+  <!-- SITE SETTINGS -->
+  <h3>Site Settings</h3>
+  <input id="siteTitle" placeholder="Site Title">
+  <input id="siteTagline" placeholder="Tagline">
+  <input id="siteLogo" placeholder="Logo Image URL">
+  <button id="saveSiteBtn">Save Site Settings</button>
+
+  <hr>
+
+  <!-- ADD CATEGORY -->
+  <h3>Add Category</h3>
+  <input id="catName" placeholder="Category Name">
+  <input id="catSlug" placeholder="Category Slug">
+  <textarea id="catDesc" placeholder="Description"></textarea>
+  <button id="addCategoryBtn">Add Category</button>
+
+  <hr>
+
+  <!-- ADD STORY -->
+  <h3>Add Story</h3>
+  <input id="storyTitle" placeholder="Story Title">
+  <input id="storySlug" placeholder="Story Slug">
+  <input id="storyCategory" placeholder="Category Slug (e.g. adventure)">
+  <textarea id="storyExcerpt" placeholder="Short Excerpt"></textarea>
+  <textarea id="storyBody" placeholder="Full Story Content"></textarea>
+  <select id="storyFeatured">
+    <option value="false">Not Featured</option>
+    <option value="true">Featured</option>
+  </select>
+  <button id="addStoryBtn">Add Story</button>
+
+  <hr>
+
+  <h3>All Stories (Firebase)</h3>
+  <div id="storyList"></div>
+
+</div>
+
+<script type="module" src="admin.js"></script>
 </body>
 </html>
