--- a/index.html
+++ b/index.html
@@ -13,6 +13,13 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Merriweather:wght@300;400;700&display=swap" rel="stylesheet">
 
+  <!-- Firebase SDK -->
+  <script src="https://www.gstatic.com/firebasejs/9.22.1/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.22.1/firebase-firestore-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.22.1/firebase-auth-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.22.1/firebase-storage-compat.js"></script>
+  <script src="firebase-config.js"></script>
+
   <!-- CSS -->
   <link rel="stylesheet" href="assets/css/style.css" />
 
@@ -177,7 +184,7 @@
 </footer>
 
 <!-- ================= JS ================= -->
-<script type="module" src="assets/js/main.js"></script>
+<script src="assets/js/firebase-main.js"></script>
 
 </body>
 </html>
